<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/banner_background"
        android:padding="20dp">

        <!-- Tiêu đề -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_sub"
            android:textColor="@android:color/white"
            android:textSize="24dp"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bannerTitle"
            android:textColor="@android:color/white"
            android:textSize="24dp"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>

        <!-- Mô tả -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online_support"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_marginBottom="16dp"/>

        <!-- 2 Button ngang -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
